--- a/bibliography.bib
+++ b/bibliography.bib
@@ -25,6 +25,16 @@
 	urldate = {2017-06-20}
 }
 
+@book{Dummit,
+	author = {David S.~Dummit and Richard M.~Foote},
+	title = {Abstract Algebra},
+	date = {2004},
+	edition = {3},
+	publisher = {John Wiley \& Sons, Inc.},
+	isbn = {0-471-43334-9}
+}
+
+
 @online{Grayson,
 	author={Daniel R. Grayson},
 	title={Zorn's Lemma},
