--- a/bases.tex
+++ b/bases.tex
@@ -731,6 +731,9 @@ Having discussed dimension, we can finally present what is arguably the most imp
 		\end{equation}
 		which is in some sense obvious since every column either corresponds to a free-variable or is a pivot column.
 	\end{rmk}
+	\begin{rmk}
+		While this itself is not true for $\K$-modules, what is true is the following:  If $T\colon V\rightarrow W$ is a linear-transformation of $\K$-modules, then $V/\Ker (T)\rightarrow \Ima (T)$ is an isomorphism---\cref{QuotientModules} for the meaning of $V\Ker (T)$.  This is an example of what is called the \emph{First Isomorphism Theorem} in the subject known as \emph{general algebra} or \emph{universal algebra}.
+	\end{rmk}
 	\begin{proof}
 		Denote the ground division ring by $\F$.  Let $\basis{B}$ be a basis of $\Ker (T)$ and let $\basis{C}$ be a basis of $V$ with $\basis{C}\supseteq \basis{B}$.  Define $\basis{A}\ceqq \basis{C}\setminus \basis{B}$, so that $\basis{C}$ is the disjoint union of $\basis{A}$ and $\basis{B}$, and hence
 		\begin{equation}
