--- a/bibliography.bib
+++ b/bibliography.bib
@@ -49,6 +49,16 @@
 	url={http://www.ams.org/journals/proc/1954-005-02/S0002-9939-1954-0060558-3/S0002-9939-1954-0060558-3.pdf}
 }
 
+@book{Jacobson,
+	author = {Nathan Jacobson},
+	title = {Basic Algebra II},
+	date = {1989},
+	edition = {2},
+	publisher = {W.~H.~Freeman and Company},
+	isbn = {0-7167-1933-9}
+}
+
+
 @book{Lam,
 	author = {T.~Y.~Lam},
 	title = {A Course in Noncommutative Rings},
@@ -65,4 +75,11 @@
 	edition = {4},
 	publisher = {Addison-Wesley},
 	isbn = {978-0-321-38517-8}
+}
+
+@book{Taylor,
+	author = {John R.~Taylor},
+	title = {Classical Mechanics},
+	date = {2005},
+	publisher = {University Science Books}
 }
