--- a/main.tex
+++ b/main.tex
@@ -38,6 +38,8 @@ Trigger warning:  Row-reduction contained herein.
 
 \include{eigen}
 
+\include{tensor}
+
 \appendix % Cannot go in apd.
 \part*{Appendices} % Will throw errors when used in combination with \includeonly
 
