--- a/preface.tex
+++ b/preface.tex
@@ -18,6 +18,8 @@ There is no hard and fast distinction between what I called theorems, propositio
 
 In particular, note that the distinction between theorems and propositions has to do with the relative \emph{significance}\footnote{Obviously this is completely subjective and I would not expect any mathematician to pick out the exact same results which deserve the title of ``theorem''.} of the \emph{statement} of the result, and has nothing to to with the \emph{difficulty} of the \emph{proof}.  Indeed, there are quite a few rather trivial results labeled as theorems simply because they are important.
 
+I should mention that every now and then I give nonstandard names to results which would otherwise not have names.  Part of the motivation for this is that I personally find this makes it easier to remember which result is which.  For example, would you rather I refer to ``\cref{FundamentalTheoremOfDiagonalizability}'' or the ``\nameref{FundamentalTheoremOfDiagonalizability}''?  Just be warned that you shouldn't go up to other mathematicians, use these names, and expect them to know what you're talking about.  (I will point it out when a name is nonstandard.)
+
 As an unimportant comment, I mention in case you're curious that I used double quotes when I am quoting something, usually a term or phrase either I or people in general use, and single quotes to indicate that the thing is quotes is not literally that thing.  For example, mathematicians prove theorems and physicists prove `theorems'.
 
 \blankline
