--- a/vector_spaces.tex
+++ b/vector_spaces.tex
@@ -184,7 +184,7 @@ Now that we've seen two equivalent definitions of $\K$-module, it's time we pres
 		For what it's worth, the ``$d$'' is for \emph{dimension}.
 	\end{rmk}
 \end{exm}
-\begin{exm}{$\K$}{}
+\begin{exm}{$\K$}{exm1.1.18x}
 	Taking $d=1$ in the previous example, we note that every ring can be viewed as a module over itself.  This might seem trivial, and I suppose in some sense it is, but it's actually relatively important, if for no other reasons than it allows us to apply results and definitions we know about modules to rings.  For example, you will learn at some point in your mathematical life that a ring is left( resp.~right) \emph{Noetherian} (by definition) iff is is Noetherian when regarded as a left (resp.~right) module over itself.
 \end{exm}
 \begin{exm}{$\K ^{\infty}$}{exm1.1.18}
@@ -247,6 +247,16 @@ And finally, the definition of a vector space.
 \end{exm}
 \begin{exm}{$C^{\infty}(O)$}{}
 	Let $O\subseteq \R ^d$ be open.  Then, $C^{\infty}(O)$\index[notation]{$C^{\infty}(O)$} is the set of smooth complex-valued functions on $O$.\footnote{This means that the function has infinitely-many continuous derivatives.}  $C^{\infty}(O)$ is then a vector space over $\C$.
+\end{exm}
+\begin{exm}{An algebraic number field}{AlgebraicNumberField}
+	Define $\F \ceqq \Q$ and $V\ceqq \Q (\sqrt{2})$.\footnote{Recall that (\cref{GeneratedField}) $\Q (\sqrt{2})$ is the smallest subfield of the algebraic-closure of $\Q$ that contains $\sqrt{2}$.}  Explicitly,
+	\begin{equation}
+		\Q (\sqrt{2})=\left\{ a+b\sqrt{2}\in \C :a,b\in \Q \right\} .
+	\end{equation}
+	This is a two-dimensional vector space over $\Q$.
+	\begin{rmk}
+		In general, extensions of $\Q$ that are finite-dimensional over $\Q$ are known as \emph{algebraic number fields}, and constitute the primary objects of interest in \emph{algebraic number theory}.\footnote{Recall that (\cref{Extension}) an \emph{extension} of a ring $\K$ is an associative algebra over $\K$ in which $\K$ is a subset.}
+	\end{rmk}
 \end{exm}
 \begin{exm}{The same set of vectors over different fields}{}
 	Define $V\ceqq \C ^2$.  Addition is done componentwise, as usual.  Now take $\F \ceqq \C$, $\F \ceqq \R$, or $\F \ceqq \Q$.  Either way, scaling $\F \times V\rightarrow V$ is done componentwise as usual, however, \emph{these are all different scaling operations} because the \emph{domains are different}.  We thus have \emph{three different vector spaces}.  While we haven't defined dimension yet, hopefully your intuition suggests that $V$ should be $2$ dimensional over $\C$, $4$ dimensional over $\R$, and infinite dimensional over $\Q$.
@@ -392,6 +402,13 @@ Having defined a type of mathematical object, we are now morally obligated to sp
 
 	Similarly as before, ``formal'' integration defines a linear-transformation on polynomials.
 \end{exm}
+\begin{exm}{}{AlgebraicNumberField2}
+	As in \cref{AlgebraicNumberField}, take $\F \ceqq \Q$, and $V\ceqq \Q (\sqrt{2})$.  Then, for any $a,b\in \Q$, $T\colon V\rightarrow V$ defined by
+	\begin{equation}
+		T(x)\ceqq (a+b\sqrt{2})x
+	\end{equation}
+	is a linear-transformation.
+\end{exm}
 With a working notion of morphism in hand, we obtain corresponding categories.
 \begin{exm}{The category of $\K$-modules}{TheCategoryOfRModules}\index{Category of $\K$-modules}
 	Let $\K$ be a ring.  Then, the category of $\K$-modules is the concrete category $\Mod{\K}$\index[notation]{$\Mod{\K}$}
@@ -405,6 +422,9 @@ With a working notion of morphism in hand, we obtain corresponding categories.
 \end{exm}
 \begin{exm}{The category of vector spaces}{TheCategoryOfVectorSpaces}\index{Category of vector spaces}
 	Let $\F$ be a division ring.  Then, the category of vector spaces over $\F$ is the category $\Vect _{\F}\ceqq \Mod{\F}$\index[notation]{$\Vect _{\F}$}.
+	\begin{rmk}
+		If $\F$ is clear from context or not relevant, we may only write $\Vect \ceqq \Vect _{\F}$\index[notation]{$\Vect$}.
+	\end{rmk}
 \end{exm}
 
 \subsection{Morphism sets and bimodules}\label{sss1.1.2}
@@ -413,7 +433,7 @@ In fact, we would like the morphism sets $\Mor _{\Mod{\K}}(V,W)$ themselves to f
 \begin{equation}
 	[\alpha \cdot T](v)\ceqq \alpha \cdot T(v).
 \end{equation}
-Unfortunately, however, this is not linear:
+Unfortunately, however, this is not linear in general:
 \begin{equation}
 	[\alpha \cdot T](\beta \cdot v)\ceqq \alpha \cdot T(\beta \cdot v)=\alpha \beta \cdot T(v)\neq \beta \cdot (\alpha \cdot T(v))\eqqc \beta \cdot [\alpha \cdot T](v).
 \end{equation}
@@ -479,8 +499,8 @@ We mentioned before briefly that one needn't introduce the complication of bimod
 \end{exm}
 
 We motivated the introduction of bimodules because we wanted to turn morphism sets themselves into modules.  Now that we have bimodules, however, we are again morally obligated to introduce the new relevant of morphism.
-\begin{dfn}{Bilinear-transformation}{BilinearTransformation}
-	Let $\K$ and $\L$ be rings, let $V$ and $W$ be $\K$-$\L$ bimodules, and let $T\colon V\rightarrow W$ be a function.  Then, $T$ is a \term{$\K$-$\L$ bilinear-transformation}\index{$\K$-$\L$-bilinear transformation} iff
+\begin{dfn}{Linear-transformation (of bimodules)}{BilinearTransformation}
+	Let $\K$ and $\L$ be rings, let $V$ and $W$ be $\K$-$\L$ bimodules, and let $T\colon V\rightarrow W$ be a function.  Then, $T$ is a \term{$\K$-$\L$-linear-transformation}\index{$\K$-$\L$-linear transformation} iff
 	\begin{enumerate}
 		\item \label{BilinearTransformation(i)}$T$ is a $\K$-linear-transformation; and
 		\item \label{BilinearTransformation(ii)}$T$ is an $\L$-linear-transformation.
@@ -489,13 +509,16 @@ We motivated the introduction of bimodules because we wanted to turn morphism se
 		Explicitly, this means that (i) $T(v_1+v_2)=T(v_1)+T(v_2)$, (ii) $T(\alpha \cdot v)=\alpha \cdot T(v)$, and (iii) $T(v\cdot \zeta )=T(v)\cdot \zeta$.
 	\end{rmk}
 	\begin{rmk}
-		If $\K$ and $\L$ are clear from context, we shall simply say \term{bilinear-transformation}\index{Bilinear-transformation}.
+		If $\K$ and $\L$ are clear from context, we shall simply say \term{Linear-transformation}\index{Linear-transformation (of bimodules)}.
 	\end{rmk}
 	\begin{rmk}
-		If $T$ only satisfies \cref{BilinearTransformation(i)}, then we may say that $T$ is \term{left linear}\index{Left linear-transformation} or \term{linear on the left}.  Likewise, if $T$ only satisfies \cref{BilinearTransformation(ii)}, we may say that $T$ is \term{right linear}\index{Right linear-transformation} or \term{linear on the right}.
+		If $T$ only satisfies \cref{BilinearTransformation(i)}, then we may say that $T$ is \term{left linear}\index{Left linear-transformation} or \term{linear on the left}.  Likewise, if $T$ only satisfies \cref{BilinearTransformation(ii)}, we may say that $T$ is \term{right linear}\index{Right linear-transformation} or \term{linear on the right}.  In this context, we may say that $T$ is \term{two-sided linear}\index{Two-sided linear} if $T$ satisfies both \cref{BilinearTransformation(i),BilinearTransformation(ii)} for emphasis to distinguish between just ``left-linear'' and ``right-linear''.
 	\end{rmk}
 	\begin{rmk}
-		A synonym for ``bilinear-transformation'' is \term{bimodule-homomorphism}\index{Bimodule-homomorphism}.
+		A synonym for ``linear-transformation of bimodules'' is \term{bimodule-homomorphism}\index{Bimodule-homomorphism}.
+	\end{rmk}
+	\begin{rmk}
+		Warning:  Don't use the term ``bilinear-transformation'' for this.  That means something else---see \cref{MultilinearTransformation}.
 	\end{rmk}
 \end{dfn}
 Again, having defined a new type of object as well as the relevant notion of morphism, we obtain a corresponding category.
@@ -503,13 +526,13 @@ Again, having defined a new type of object as well as the relevant notion of mor
 	Let $\K$ and $\L$ be rings.  Then, the category of $\K$-$\L$-bimodules is the concrete category $\Mod{\K}[\L]$\index[notation]{$\Mod{\K}[\L]$}
 	\begin{enumerate}
 		\item whose collection of objects $\Obj (\Mod{\K}[\L])$ is the collection of all $\K$-$\L$-bimodules; and
-		\item with morphism set $\Mor _{\Mod{\K}[\L]}(V,W)$ precisely the set of all bilinear-transformations from $V$ to $W$.
+		\item with morphism set $\Mor _{\Mod{\K}[\L]}(V,W)$ precisely the set of all linear-transformations from $V$ to $W$.
 	\end{enumerate}
 \end{exm}
 
 We now turn to the issue of equipping morphism sets of \emph{bimodules} with another bimodule structure.  As we can view any $\K$-module $V$ as a $\K$-$\Z$-bimodule, this will allow us to equip $\Mor _{\Mod{\K}}(V,W)$ with the structure of a bimodule.  We will find, however, that the bimodule structure on $\Mor _{\Mod{\K}}(V,W)$ is not just that of a left $\K$-module---if it were that simple, we wouldn't have needed to take this excursion on bimodules in the first place.
-\begin{exm}{$\Mor _{\Mod{R}}(V,W)$}{}
-	Let $R$, $S$, and $T$ be rings, and let $V$ be an $R$-$S$-bimodule and let $W$ be an $R$-$T$-bimodule.  Then, as $V$ and $W$ are both left $R$-modules, and so while we cannot speak of bilinear-transformations, we can speak of left linear-transformations.  In fact, $\Mor _{\Mod{R}}(V,W)$ can be given the structure of an $S$-$T$ bimodule:\footnote{Addition is defined pointwise.  We don't mention this explicitly because addition is always pointwise and the sum of two linear-transformations is always again linear.}
+\begin{exm}{$\Mor _{\Mod{R}}(V,W)$ is an $S$-$T$-bimodule}{}
+	Let $R$, $S$, and $T$ be rings, and let $V$ be an $R$-$S$-bimodule and let $W$ be an $R$-$T$-bimodule.  Then, as $V$ and $W$ are both left $R$-modules, and so while we cannot speak of linear-transformations, we can speak of left linear-transformations.  In fact, $\Mor _{\Mod{R}}(V,W)$ can be given the structure of an $S$-$T$-bimodule:\footnote{Addition is defined pointwise.  We don't mention this explicitly because addition is always pointwise and the sum of two linear-transformations is always again linear.}
 	\begin{equation}
 		[s\cdot T\cdot t](v)\ceqq T(v\cdot s)\cdot t.
 	\end{equation}
@@ -520,7 +543,7 @@ We now turn to the issue of equipping morphism sets of \emph{bimodules} with ano
 		Check that this makes $\Mor _{\Mod{R}}(V,W)$ into an $S$-$T$-bimodule.
 	\end{exr}
 \end{exm}
-\begin{exm}{$\Mor _{\Mod{}[S]}(V,W)$}{}
+\begin{exm}{$\Mor _{\Mod*{S}}(V,W)$ is a $T$-$R$-bimodule}{}
 	Let $R$, $S$, and $T$ be rings, let $V$ be an $R$-$S$-bimodule and let $W$ be a $T$-$S$-bimodule.\footnote{Note that $V$ is still an $R$-$S$-bimodule as in the previous example, but now $W$ is a $T$-$S$-bimodule (before it was an $R$-$T$-bimodule).}  Thus, in this case, we can speak of the \emph{right} linear-transformations.  In fact, $\Mor _{\Mod{}[S]}(V,W)$ can be given the structure of a $T$-$R$-bimodule:
 	\begin{equation}
 		[t\cdot T\cdot r](v)\ceqq t\cdot T(r\cdot v).
@@ -650,7 +673,14 @@ Quotient objects are actually relatively difficult the first time one encounters
 		The term ``ideal'' is never used in this context.  This is because, by the the following result, this condition is equivalent to being a subspace, and so people use only term the ``subspace''.
 	\end{rmk}
 	\begin{rmk}
-		By now, as we've seen the concepts of subobject and quotient object of algebraic structures pop up on several occasions, you might be wondering whether one can develop theory that would generalize and be capable of tackling all these cases at once (so that we don't have to separately define ``quotient group'', ``quotient rng'', ``quotient space'', etc.).  Of course the answer is ``Yes, there is such a generalization.'', and this generalization is known as \emph{general algebra}\index{General algebra} or \emph{universal algebra}\index{Universal algebra}.  As this is an introductory \emph{analysis} text, it would be insane to develop any of this theory at all.  Indeed, all of the algebra we're doing is being done for tangential reasons as it is.
+		By now, as we've seen the concepts of subobject and quotient object of algebraic structures pop up on several occasions, you might be wondering whether one can develop theory that would generalize and be capable of tackling all these cases at once (so that we don't have to separately define ``quotient group'', ``quotient rng'', ``quotient space'', etc.).  Of course the answer is ``Yes, there is such a generalization.'', and this generalization is known as \emph{general algebra}\index{General algebra} or \emph{universal algebra}\index{Universal algebra}.  As this is an introductory linear algebra text, it would be insane to develop any of this theory at all.  Indeed, all of the algebra we're doing is being done for tangential reasons as it is.
+	\end{rmk}
+	\begin{rmk}
+		For us, one of the most important properties of the quotient space is that
+		\begin{equation}
+			\dim (V/W)=\dim (V)-\dim (W),
+		\end{equation}
+		at least when $V$ is a finite-dimensional vector space.  Of course, we don't know what dimension is yet, but for now you can just take note of the fact is that this is one reason in the future we might care.  For example, the \namerefpcref{RankNullityTheorem} can be understood to follow from this fact.
 	\end{rmk}
 \end{dfn}
 \begin{exr}{}{}
@@ -663,13 +693,13 @@ Quotient objects are actually relatively difficult the first time one encounters
 \subsection{The (co)kernel and (co)image}
 
 A fact with which you are likely familiar is that, to each linear-transformation, are associated two subspaces, a subspace of the domain and a subspace of the codomain.  A fact with which you are unlikely familiar is that there are likewise two \emph{quotient} modules associated to each linear-transformation as well.  One of the subspaces is just the image, something you (hopefully) are already quite comfortable with.  The other three, however, we should probably define.  Note again that the concepts of coimage and cokernel can likely safely be skipped for the time being.
-\begin{dfn}{Kernel}{Kernel}
-	Let $T\colon V\rightarrow W$ be a linear-transformation.  Then, the \term{kernel}\index{Kernel} of $T$, $\Ker (T)$\index[notation]{$\Ker (T)$}, is defined by
+\begin{dfn}{Kernel (of a linear-transformation)}{Kernel}
+	Let $T\colon V\rightarrow W$ be a linear-transformation.  Then, the \term{kernel}\index{Kernel (of a linear-transformation)} of $T$, $\Ker (T)$\index[notation]{$\Ker (T)$}, is defined by
 	\begin{equation}
-	\Ker (T)\ceqq \left\{ v\in M:T(v)=0\right\} .
+	\Ker (T)\ceqq \left\{ v\in V:T(v)=0\right\} .
 	\end{equation}
 	\begin{rmk}
-		If the term ``kernel'' is unfamiliar to you, perhaps the term \term{null-space}\index{Null-space} is.  While I prefer to try to reserve the term ``null-space'' for matrices and ``kernel'' for linear-transformations, they are essentially the same thing.  Similarly, the term \term{column-space}\index{Column-space} is essentially the same as the image of a linear-transformation, though, again, this terminology is more appropriate in the context of matrices.
+		If the term ``kernel'' is unfamiliar to you, perhaps the term \term{null-space}\index{Null-space} is.  While I prefer to try to reserve the term ``null-space'' for matrices and ``kernel'' for linear-transformations, they are essentially the same thing.  Similarly, the term is essentially the same as the image of a linear-transformation, though, again, this terminology is more appropriate in the context of matrices.  When I do use this terminology, however, I shall write $\Null (A)$\index[notation]{$\Null (A)$} for the null-space and $\Col (A)$ for the column-space.
 	\end{rmk}
 	\begin{rmk}
 		Note the \emph{capital} ``$\mrm{K}$'' in ``$\Ker$''.    I don't promise you that everyone will be strict about this, but it is common to use a capital letter to refer to the kernel as an object (set) and to use a lowercase letter to refer to the corresponding map $\Ker (T)\xrightarrow{\ker (T)}M$\index[notation]{$\ker (T)$}.  In this context, this distinction is a pedantic one, but it's a distinction that will matter as you progress in your studies.
